Housekeeping. Prep to make a windows app.

--- a/CreateURealmsTiles/CreateURealmsTiles.csproj
+++ b/CreateURealmsTiles/CreateURealmsTiles.csproj
@@ -45,9 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateJSONFile.cs" />
     <Compile Include="Functions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setup.cs" />
     <Compile Include="UploadImage.cs" />
   </ItemGroup>
   <ItemGroup>
