--- a/CreateURealmsTiles/CreateURealmsTiles.csproj
+++ b/CreateURealmsTiles/CreateURealmsTiles.csproj
@@ -48,10 +48,13 @@
   <ItemGroup>
     <Compile Include="CreateJSONFile.cs" />
     <Compile Include="Functions.cs" />
+    <Compile Include="GIMP.cs" />
+    <Compile Include="Logging.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="UploadImage.cs" />
+    <Compile Include="Variables.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
